fixed social media icon spacing

--- a/pages/About.module.scss
+++ b/pages/About.module.scss
@@ -69,6 +69,7 @@
   @include flex-container-row;
   justify-content: space-evenly;
   align-items: center;
+  width: 10rem;
   // transform: translateX(-5rem);
 }
 
